fixed ADA issue: footer contrast color

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -352,6 +352,9 @@ footer.footer {
 .footer__copyright {
   text-align: left;
   margin-top: 1.5rem;
+
+  background-color: #F6F7F8;
+  color: #282828;
 }
 
 @media screen and (min-width: 750px) {
